// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo config-manager push secrets "frodo config-manager push secrets -D test/e2e/exports/fr-config-manager/cloud ": should import the secrets into cloud" 1`] = `""`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets -D test/e2e/exports/fr-config-manager/cloud ": should import the secrets into cloud" 2`] = `
"Experimental feature in use: 'frodo config-manager push secrets'. This feature may change without notice.
✔ Successfully read 4 secrets.
• 0 secrets imported.
No changes, (0 secrets(s) already up to date)
"
`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets -n esv-fr-test-secret -E ESV_FR_TEST_SECRET="new fr version" -n esv-test-secret -E ESV_TEST_SECRET="new test version" -D test/e2e/exports/fr-config-manager/cloud": should import multiple specified secrets into cloud 1`] = `""`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets -n esv-fr-test-secret -E ESV_FR_TEST_SECRET="new fr version" -n esv-test-secret -E ESV_TEST_SECRET="new test version" -D test/e2e/exports/fr-config-manager/cloud": should import multiple specified secrets into cloud 2`] = `
"Experimental feature in use: 'frodo config-manager push secrets'. This feature may change without notice.
✔ Successfully read 1 secrets.
Secret esv-test-secret unchanged version 2
• 1 secrets imported.
No changes, (1 secrets(s) already up to date)
"
`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets -n esv-fr-test-secret -E ESV_FR_TEST_SECRET="test1" test/e2e/exports/fr-config-manager/cloud": should import the specified secret into cloud 1`] = `""`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets -n esv-fr-test-secret -E ESV_FR_TEST_SECRET="test1" test/e2e/exports/fr-config-manager/cloud": should import the specified secret into cloud 2`] = `
"Experimental feature in use: 'frodo config-manager push secrets'. This feature may change without notice.
✔ Successfully read 1 secrets.
Secret esv-fr-test-secret created version 3
• 1 secrets imported.
Changes made to secrets: 1 updated, 0 unchanged
"
`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets -n esv-test-secret -E ESV_TEST_SECRET="tes6" -n esv-test-secret-2 -E ESV_TEST_SECRET="test7" -D test/e2e/exports/fr-config-manager/cloud": should import multiple specified secrets into cloud 1`] = `""`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets -n esv-test-secret -E ESV_TEST_SECRET="tes6" -n esv-test-secret-2 -E ESV_TEST_SECRET="test7" -D test/e2e/exports/fr-config-manager/cloud": should import multiple specified secrets into cloud 2`] = `
"Experimental feature in use: 'frodo config-manager push secrets'. This feature may change without notice.
✔ Successfully read 1 secrets.
• 0 secrets imported.
No changes, (0 secrets(s) already up to date)
"
`;
